# neutral-host-management-platform

./: .gitignore  README.md
.devcontainer/: Dockerfile  bootstrap.sh  devcontainer.json
.github/workflows/: apache.yaml  energy-controller.yaml  flexric.yaml  gnb-core-mapper.yaml  simulator.yaml  upf.yaml
amd-uprof-analytics/: amd-uprof-analytics.ipynb  timechart.csv
ansible-playbook/: site.yaml
ansible-playbook/inventory/: hosts.ini
ansible-playbook/inventory/group_vars/: all.yaml
apache/: Dockerfile
apache/internal/: deploy.yaml
apache/internal/api/: kpm_ingest.php  webhook.php  (+1 more)
dashboard/: api.php  index.php  prb-map.php  resource-control.php  traffic-control.php
dashboard/src/: Auth.php  Config.php  DashboardService.php  Database.php  RedisCache.php  bootstrap.php
deploy/: deploy.yaml
energy-controller/: Dockerfile  controller.py  deploy.yaml
flexric/: CMakeLists.txt  Dockerfile  entrypoint.sh  kpm_custom.c
helm-charts/open5gs/: README.md
helm-charts/supporting-services/: Chart.yaml  README.md  local-repo.sh  normal-repo.sh  persistent-volume-claim.yaml  persistent-volume.yaml  restart-ric.sh  restart-xapp.sh  uninstall-ric.sh
mapper/: Dockerfile  deploy.yaml  mapper.py
open5gs-upf/: Dockerfile  controller.py  service.yaml
postgres/: deploy.sh  persistent-volume-claim.yaml  persistent-volume.yaml
redis/: deploy.sh  master-persistent-volume-claim.yaml  master-persistent-volume.yaml
sierra-wireless-ues/: modem_manager.py
simulator/: Dockerfile  docker-compose.yaml  simulator.py
sql/: schema.sql
vector/: deploy.sh  values.yaml
(+170 files in other folders)
